[gd_scene load_steps=16 format=3 uid="uid://d0tw8725i60yu"]

[ext_resource type="Script" path="res://scenes/Bullet.gd" id="1_7yd5s"]
[ext_resource type="Texture2D" uid="uid://cu570m3pu4f0i" path="res://textures/smoke.png" id="2_2x6if"]
[ext_resource type="Texture2D" uid="uid://br3lf4o821xl4" path="res://textures/hitmarker.png" id="3_r6etj"]
[ext_resource type="AudioStream" uid="uid://b0skubcddl7nh" path="res://sounds/hit.wav" id="4_kp34y"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eslfc"]
albedo_color = Color(0.972549, 0, 0.65098, 1)

[sub_resource type="SphereMesh" id="SphereMesh_gq2qi"]
material = SubResource("StandardMaterial3D_eslfc")
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qpnca"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("2_2x6if")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_hyw8s"]
material = SubResource("StandardMaterial3D_qpnca")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2o0x1"]
shading_mode = 0
disable_ambient_light = true

[sub_resource type="CylinderMesh" id="CylinderMesh_0pusd"]
material = SubResource("StandardMaterial3D_2o0x1")
top_radius = 0.05
bottom_radius = 0.05
height = 0.2
cap_top = false
cap_bottom = false

[sub_resource type="Animation" id="Animation_k0c1y"]
resource_name = "bullet_impact"
length = 0.2
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.2, 1, 12, 0.1, 12)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, 0, 0.217809, 0, 0.2, 1, 0, 0, 0)
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fldsk"]
_data = {
"bullet_impact": SubResource("Animation_k0c1y")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gmht0"]
transparency = 1
no_depth_test = true
shading_mode = 0
disable_ambient_light = true
albedo_texture = ExtResource("3_r6etj")
disable_receive_shadows = true
billboard_mode = 1
billboard_keep_scale = true
fixed_size = true

[sub_resource type="QuadMesh" id="QuadMesh_lavk1"]
material = SubResource("StandardMaterial3D_gmht0")

[sub_resource type="Curve" id="Curve_2kiyc"]
max_value = 0.15
_data = [Vector2(0, 0.0872727), 0.0, 1.04, 0, 0, Vector2(0.188312, 0.15), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.477273, 0.0, 0, 0]
point_count = 3

[node name="Bullet" type="Node3D"]
editor_description = "Bullets that get shot from players."
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_7yd5s")

[node name="BulletMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_gq2qi")

[node name="Particles" type="CPUParticles3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.217809, 0)
cast_shadow = 0
emitting = false
amount = 5
lifetime = 0.3
one_shot = true
explosiveness = 1.0
randomness = 0.7
draw_order = 2
mesh = SubResource("QuadMesh_hyw8s")
direction = Vector3(0, 1, 0)
initial_velocity_min = 3.0
initial_velocity_max = 3.0
scale_amount_min = 0.5
scale_amount_max = 0.5

[node name="ImpactMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.217809, 0)
visible = false
cast_shadow = 0
mesh = SubResource("CylinderMesh_0pusd")
skeleton = NodePath("../BulletRay")

[node name="ImpactAnimator" type="AnimationPlayer" parent="ImpactMesh"]
libraries = {
"": SubResource("AnimationLibrary_fldsk")
}

[node name="BulletRay" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
target_position = Vector3(1, 0, 0)
collision_mask = 2
hit_from_inside = true

[node name="Hitmarker" type="CPUParticles3D" parent="."]
cast_shadow = 0
emitting = false
amount = 1
lifetime = 0.2
one_shot = true
mesh = SubResource("QuadMesh_lavk1")
gravity = Vector3(0, 0, 0)
scale_amount_curve = SubResource("Curve_2kiyc")

[node name="HitAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kp34y")
